--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Comparison operators
 <= Less Than or equal to  - tests whether the left value is smaller than or equal to the right value
 >= Greater than or equal to -tests whether the left value is greater thab or equal to the right value
 
-These are great boolean options, which are great for desicsion making. 
+These are great boolean options, which are great for desicsion making.  two values: true and false 
 see line 10
 
 */
