reveiew and applying conditional logic calendar,color theme, etc..

--- a/index.html
+++ b/index.html
@@ -26,5 +26,79 @@
     <section>
       <div class="hi-bye">Hi</div>
     </section>
+
+    <!-- see line 465 for applying -->
+    <br />
+    <section>
+      <label for="shirt-size">Selection of shirt size</label>
+      <select name="shirt-size" id="size-selection">
+        <option value="">Select Size</option>
+        <option class="size-value" value="small">S</option>
+        <option class="size-value" value="medium">M</option>
+        <option class="size-value" value="large">L</option>
+      </select>
+      <p class="user-selected"></p>
+    </section>
+
+    <!-- see line 492 for applying  -->
+
+    <label for="sport-catagory">Sport Catagory</label>
+    <select name="" id="sport-selection">
+      <option value="">Select Sport</option>
+      <option value="basketball">Basketball</option>
+      <option value="hockey">Hockey</option>
+      <option value="soccer">Soccer</option>
+      <option value="football">Football</option>
+      <option value="tennis">Tennis</option>
+    </select>
+    <p class="user-sport-selected"></p>
+
+    <!-- see line 580 for applying ternary opertor -->
+    <section>
+      <br />
+      <label for="color-theme"> Color theme:</label>
+
+      <select name="" id="color-theme-selection">
+        <option value="black">Black</option>
+        <option value="white">White</option>
+      </select>
+    </section>
+
+    <!-- see line 605 for applying -->
+    <br />
+    <section id="calendar">
+      <label for="months">Months:</label>
+      <select name="" id="month-selection">
+        <option value="January">January</option>
+        <option value="February">February</option>
+        <option value="March">March</option>
+        <option value="April">April</option>
+        <option value="May">May</option>
+        <option value="June">June</option>
+        <option value="July">July</option>
+        <option value="August">August</option>
+        <option value="September">September</option>
+        <option value="November">November</option>
+        <option value="October">October</option>
+        <option value="December">December</option>
+      </select>
+      <h1 class="month-title"></h1>
+
+      <ul class="month-list"></ul>
+    </section>
+
+    <!-- see line 652 for applying -->
+    <section>
+      <br />
+      <label for="color-theme"> Mor Color themes:</label>
+
+      <select name="" id="color-selection">
+        <option value="Orange">Orange</option>
+        <option value="Purple">Purple</option>
+        <option value="Yellow">Yellow</option>
+        <option value="Psychedelic">Psychedelic</option>
+      </select>
+      <div class="color-theme-bg"></div>
+    </section>
   </body>
 </html>
