Return, function within function, parameters, scopes, function naming

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css" />
     <!--  The defer attribute is only for external scripts (should only be used if the src attribute is present). -->
     <script type="text/javascript" src="js/main.js" defer></script>
+    <script type="text/javascript" src="js/returning-funtion.js" defer></script>
     <title>Intro to JavaScript</title>
   </head>
 
@@ -99,6 +100,18 @@
         <option value="Psychedelic">Psychedelic</option>
       </select>
       <div class="color-theme-bg"></div>
+    </section>
+
+    <!-- seel line 970 for apply -->
+    <section id="scope-section">
+      <div class="output-scope"></div>
+    </section>
+
+    <!-- seel line 1035 for apply -->
+    <section id="scope-section">
+      <label for="number-input">For number Input: </label>
+      <input class="number-input" />
+      <p class="number-output"></p>
     </section>
   </body>
 </html>
