Callback,Callstack,retuning function, and arrow function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <!--  The defer attribute is only for external scripts (should only be used if the src attribute is present). -->
     <script type="text/javascript" src="js/main.js" defer></script>
     <script type="text/javascript" src="js/returning-funtion.js" defer></script>
+    <script type="text/javascript" src="js/callstack.js" defer></script>
+    <script
+      type="text/javascript"
+      src="js/callback-functions.js"
+      defer
+    ></script>
     <title>Intro to JavaScript</title>
   </head>
 
@@ -113,5 +119,7 @@
       <input class="number-input" />
       <p class="number-output"></p>
     </section>
+
+    <!-- see callback function for applying -->
   </body>
 </html>
