Finishing up loops, start on javascript exercises

--- a/loops.html
+++ b/loops.html
@@ -25,5 +25,13 @@
         <p class="search-output"></p>
       </div>
     </section>
+
+    <!-- sell line 142 for applying    -->
+    <section>
+      <div class="guest-list">
+        <div class="admit"></div>
+        <div class="refuse"></div>
+      </div>
+    </section>
   </body>
 </html>
