Regular expressions and exercises

--- a/array.html
+++ b/array.html
@@ -16,5 +16,6 @@
         <p class="array-text-forEach"></p>
       </div>
     </section>
+    <section id="phoneContainer"></section>
   </body>
 </html>
